--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "axel-js",
-  "version": "0.1.3",
+  "version": "0.1.4",
   "description": "A lightweight download accelerator. Similar to axel.",
   "main": "./lib/axel.js",
   "bin": {
@@ -11,9 +11,9 @@
   },
   "dependencies": {
     "cli-color-tty": "^2.0.0",
+    "es5-ext": "^0.10.12",
     "extend": "^3.0.0",
     "option-parser": "^0.1.3",
-    "prettyjson": "^1.1.3",
     "sprintf-js": "^1.0.3"
   },
   "devDependencies": {},
